# MLOPs-Production-Ready-Deep-Learning-Project

./: .gitignore  README.md  app.py  demo.py  dvc.yaml  main.py  params.yaml  pyproject.toml  scores.json  setup.py  template.py
config/: config.yaml
research/: 01_data_ingestion.ipynb  test.yaml  trials.ipynb
src/cnnClassifier/components/: data_ingestion.py  evaluation.py  prepare_base_model.py
src/cnnClassifier/config/: configuration.py
src/cnnClassifier/entity/: config_entity.py
src/cnnClassifier/pipeline/: stage_01_data_ingestion.py  stage_02_prepare_base_model.py  stage_03_model_trainer.py  stage_04_evaluation.py
