[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cnnClassifier"
version = "0.0.0"
authors = [
    {name = "rbi-international", email = "rohit.bharti8211@gmail.com"}
]
description = "A small python package for CNN app"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rbi-international/MLOPs-Production-Ready-Deep-Learning-Project"
"Bug Tracker" = "https://github.com/rbi-international/MLOPs-Production-Ready-Deep-Learning-Project/issues"

[tool.setuptools.packages.find]
where = ["src"]